# ztoon

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.MD  build.bat  build.sh  debug.bat  loc_dir.sh  memory_check.bat  run.bat  run_tests.bat  run_tests.sh  todo.md  ztoon_grammar.txt
tests/: CMakeLists.txt
tests/src/: main.cpp  tests.cpp  ztest.h
tests/src/code_gen/: code_gen_tests.cpp
tests/src/lexer/: lexer_test.cpp
tests/src/memory_arena/: memory_arena_test.cpp
tests/src/parser/: parser_tests.cpp
tests/src/semantic_analyzer/: semantic_analyzer_tests.cpp
tests/workspaces/basic_game/: ztoon.yaml
tests/workspaces/basic_game/core/: ztoon.yaml
tests/workspaces/basic_game/core/src/: containers.ztoon  lib.ztoon
tests/workspaces/basic_game/game/: ztoon.yaml
tests/workspaces/basic_game/game/src/: main.ztoon
tests/workspaces/basic_game/sdl3/: ztoon.yaml
tests/workspaces/basic_game/sdl3/src/: lib.ztoon
tests/workspaces/basics/: ztoon.yaml
tests/workspaces/basics/arrays/: ztoon.yaml
tests/workspaces/basics/arrays/src/: main.ztoon
tests/workspaces/basics/arrays_multi_dimensions/: ztoon.yaml
tests/workspaces/basics/arrays_multi_dimensions/src/: main.ztoon
tests/workspaces/basics/basic_arithmetics/: ztoon.yaml
tests/workspaces/basics/basic_arithmetics/src/: lib.ztoon
tests/workspaces/basics/bitwise_ops/: ztoon.yaml
tests/workspaces/basics/bitwise_ops/src/: main.ztoon
tests/workspaces/basics/boolean_ops/: ztoon.yaml
tests/workspaces/basics/boolean_ops/src/: main.ztoon
tests/workspaces/basics/casting/: ztoon.yaml
tests/workspaces/basics/casting/src/: main.ztoon
tests/workspaces/basics/compound_assignment/: ztoon.yaml
tests/workspaces/basics/compound_assignment/src/: main.ztoon
tests/workspaces/basics/defer/: ztoon.yaml
tests/workspaces/basics/defer/src/: main.ztoon
tests/workspaces/basics/dinfo/: ztoon.yaml
tests/workspaces/basics/dinfo/src/: main.ztoon
tests/workspaces/basics/enums/: ztoon.yaml
tests/workspaces/basics/enums/src/: main.ztoon
tests/workspaces/basics/for_loop/: ztoon.yaml
tests/workspaces/basics/for_loop/src/: main.ztoon
tests/workspaces/basics/for_loop_break/: ztoon.yaml
tests/workspaces/basics/for_loop_break/src/: main.ztoon
tests/workspaces/basics/for_loop_continue/: ztoon.yaml
tests/workspaces/basics/for_loop_continue/src/: main.ztoon
tests/workspaces/basics/function_call/: ztoon.yaml
tests/workspaces/basics/function_call/src/: main.ztoon
tests/workspaces/basics/function_pointers/: ztoon.yaml
tests/workspaces/basics/function_pointers/src/: main.ztoon
tests/workspaces/basics/functions/: ztoon.yaml
tests/workspaces/basics/functions/src/: main.ztoon
tests/workspaces/basics/generics/: ztoon.yaml
tests/workspaces/basics/generics/src/: main.ztoon  other.ztoon
tests/workspaces/basics/global_variables/: ztoon.yaml
tests/workspaces/basics/global_variables/src/: main.ztoon
tests/workspaces/basics/if_statement/: ztoon.yaml
tests/workspaces/basics/if_statement/src/: main.ztoon
tests/workspaces/basics/integers/: ztoon.yaml
tests/workspaces/basics/integers/src/: main.ztoon
tests/workspaces/basics/nested_loops/: ztoon.yaml
tests/workspaces/basics/nested_loops/src/: main.ztoon
tests/workspaces/basics/nested_loops_break_continue/: ztoon.yaml
tests/workspaces/basics/nested_loops_break_continue/src/: main.ztoon
tests/workspaces/basics/pointers/: ztoon.yaml
tests/workspaces/basics/pointers/src/: main.ztoon
tests/workspaces/basics/readonly/: ztoon.yaml
tests/workspaces/basics/readonly/src/: main.ztoon
tests/workspaces/basics/recursion/: ztoon.yaml
tests/workspaces/basics/recursion/src/: main.ztoon
tests/workspaces/basics/shift_ops/: ztoon.yaml
tests/workspaces/basics/shift_ops/src/: main.ztoon
tests/workspaces/basics/strings/: ztoon.yaml
tests/workspaces/basics/strings/src/: main.ztoon
tests/workspaces/basics/struct_methods/: ztoon.yaml
tests/workspaces/basics/struct_methods/src/: main.ztoon
tests/workspaces/basics/structs/: ztoon.yaml
tests/workspaces/basics/structs/src/: main.ztoon
tests/workspaces/basics/ternary_expression/: ztoon.yaml
tests/workspaces/basics/unary_minus/: ztoon.yaml
tests/workspaces/basics/unary_sizeof/: ztoon.yaml
tests/workspaces/basics/uninitialized_variables/: ztoon.yaml
tests/workspaces/basics/unions/: ztoon.yaml
tests/workspaces/basics/while_loop/: ztoon.yaml
tests/workspaces/basics/while_loop_break/: ztoon.yaml
tests/workspaces/basics/while_loop_continue/: ztoon.yaml
(+39 files in other folders)
